# test_app

./: .gitignore  README.md  pyproject.toml
test_app/test_api/: models.py  serializers.py  urls.py  utils.py  views.py
test_app/test_api/migrations/: 0001_initial.py
test_app/test_app/: settings.py  urls.py  wsgi.py
